Commit 2 : The Student Login Portal
Contains
- JavaScript Login
- Redirecting

--- a/GROUP_PROJECT/myLogin.html
+++ b/GROUP_PROJECT/myLogin.html
@@ -6,24 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>International State College of the Philippines</title>
     <link rel="stylesheet" href="CSS/myLogin.css">
+    <link rel="icon" type="image/x-icon" href="Images/ico/Logo.ico">
 </head>
 <body>
-    <div class="father">
-        <img src="Images/User.jpg" alt="">
+    <div>
+        <img src="Images/myLogin/ISCP.png" alt="" class="logo">
     </div>
 <div class="mother">
-    <img src="Images/Logo.png" class="logo">
+    <img src="Images/myLogin/User.jpg" class="userlogo">
     <h2>Login Here</h2>
     <form>
         <p>Username</p>
-        <input type="text" placeholder="Enter Username">
+        <input type="text" placeholder="Enter Username" id="username">
         <p>Password</p>
-        <input type="text" placeholder="Enter Password">
+        <input type="password" placeholder="Enter Password" id="password">
         <input type="submit" value="Login">
-        <a href="#">Forget password?</a> <br>
-        <a href="#">Don't have an account?</a>
+        <a href="#" onclick="location.href='myForgotPassword.html';">Forget password?</a> <br>
+        <a href="#" onclick="location.href='myRegister.html';">Don't have an account?</a>
     </form>
-   
+<script>
+    function auth(){
+        var user = document.getElementById("username").value;
+        var password = document.getElementById("password").value;
+        if(user == "admin" && password == "1234567890"){
+            window.location.assign("myHome.html")
+            alert("Login Successfully");
+        }
+    }
+</script>
+
 </div>
 </body>
 </html>
