Commit 3 : The Student Login Portal
Contains
- JavaScript Login
- Redirecting

Fixes
- Redirecting to another Page

--- a/GROUP_PROJECT/myLogin.html
+++ b/GROUP_PROJECT/myLogin.html
@@ -16,25 +16,15 @@
     <img src="Images/myLogin/User.jpg" class="userlogo">
     <h2>Login Here</h2>
     <form>
-        <p>Username</p>
-        <input type="text" placeholder="Enter Username" id="username">
-        <p>Password</p>
-        <input type="password" placeholder="Enter Password" id="password">
-        <input type="submit" value="Login">
+        <label for="loginUser"> Username </label>
+        <input type="text" name="loginUser" placeholder="Enter Username" id="username" required>
+        <label for="loginPassword"> Password </label>
+        <input type="password" name="loginPassword" placeholder="Enter Password" id="password" required>
+        <input type="submit" value="Login" onclick="auth()">
         <a href="#" onclick="location.href='myForgotPassword.html';">Forget password?</a> <br>
         <a href="#" onclick="location.href='myRegister.html';">Don't have an account?</a>
     </form>
-<script>
-    function auth(){
-        var user = document.getElementById("username").value;
-        var password = document.getElementById("password").value;
-        if(user == "admin" && password == "1234567890"){
-            window.location.assign("myHome.html")
-            alert("Login Successfully");
-        }
-    }
-</script>
-
+<script src="JavaScript/jsLogin.js"></script>
 </div>
 </body>
 </html>
