--- a/GROUP_PROJECT/myRegister.html
+++ b/GROUP_PROJECT/myRegister.html
@@ -16,11 +16,11 @@
     <h2>Registration</h2>
     <form>
         <p>Username</p>
-        <input type="text" placeholder="Username">
+        <input type="text" placeholder="Username" required>
         <p>Password</p>
-        <input type="password" placeholder="Password">
+        <input type="password" placeholder="Password" required>
         <p>Repeat Password</p>
-        <input type="password" placeholder="Repeat Password">
+        <input type="password" placeholder="Repeat Password" required>
         <input type="button" value="Register" onclick="location.href='myRegistered.html';">
         <a href="#" onclick="location.href='myLogin.html';">Already have an account?</a>
     </form>
