Commit 4 : The Homepage
Contains
- Animation
- Linear background
- nth Child

--- a/GROUP_PROJECT/myHome.html
+++ b/GROUP_PROJECT/myHome.html
@@ -4,11 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>International State College of the Philippines</title>
+    <link rel="stylesheet" href="CSS/myHome.css">
+    <link rel="icon" type="image/x-icon" href="Images/ico/Logo.ico">
+    <script src="JavaScript/jsScrollbar.js"></script>
 </head>
-<body>
-    <div>
-        hello
+<body id="scrollbar">
+    <hr class="outline">
+    <div class="navigation">
+        <img src="Images/myHome/Logo.png" alt="" class="logo">
+        <p>International State College of <br> Philippines</p>
+        <nav>
+            <a href="myHome.html" class="homecolor">Home</a>
+            <a href="">About</a>
+            <a href="">Academics</a>
+            <a href="">Admission</a>
+            <a href="">Contacts</a>
+            <div class="animation start-home"></div>
+        </nav>
+            <a href="myLogin.html"><img src="Images/myHome/logout-512.png" alt="" class="logout"></a>
+            <img src="Images/myHome/User.jpg" alt="" class="userlog">
+    </div>
+    <div class="bg-gradient">
+            <img src="Images/myHome/image.gif" alt="" class="schoologo">
+    </div>
+    <div class="school">
+        <img src="Images/myHome/Background.jpg" alt="" class="school-img">
     </div>
 </body>
 </html>
