Commit 6 : The Homepage
Added
- Admission part

--- a/GROUP_PROJECT/myForgotPassword.html
+++ b/GROUP_PROJECT/myForgotPassword.html
@@ -7,6 +7,7 @@
     <title>International State College of the Philippines</title>
     <link rel="stylesheet" href="CSS/myForgotPassword.css">
     <link rel="icon" type="image/x-icon" href="Images/ico/Logo.ico">
+    <script src="JavaScript/jsForgot.js"></script>
 </head>
 <body>
     <div>
@@ -16,14 +17,14 @@
     <h2>Forgot Password</h2>
     <form>
         <p>Search by Username</p>
-        <input type="text" placeholder="Enter Username">
-        <input type="submit" value="Search">
+        <input type="text" placeholder="Enter Username" id="username">
+        <input type="submit" value="Search" onclick="user()">
         <p>Search by E-mail</p>
-        <input type="text" placeholder="Enter E-mail">
-        <input type="submit" value="Search">
+        <input type="text" placeholder="Enter E-mail" id="email">
+        <input type="submit" value="Search" onclick="email()">
         <a href="#" onclick="location.href='myLogin.html';">Return to Login</a>
     </form>
-   
+
 </div>
 </body>
 </html>
