--- a/GROUP_PROJECT/myHome.html
+++ b/GROUP_PROJECT/myHome.html
@@ -12,6 +12,7 @@
 <body id="scrollbar">
     <hr class="outline">
     <div class="navigation">
+        <section>
         <img src="Images/myHome/Logo.png" alt="" class="logo">
         <p>International State College of <br> Philippines</p>
         <nav>
@@ -24,12 +25,17 @@
         </nav>
             <a href="myLogin.html"><img src="Images/myHome/logout-512.png" alt="" class="logout"></a>
             <img src="Images/myHome/User.jpg" alt="" class="userlog">
+        </section>
     </div>
-    <div class="bg-gradient">
-            <img src="Images/myHome/image.gif" alt="" class="schoologo">
-    </div>
-    <div class="school">
-        <img src="Images/myHome/Background.jpg" alt="" class="school-img">
+    <div class="admission">
+        <section class="banner">
+            <img src="Images/myHome/Banner.png" alt="">
+        </section>
+        <section class="bg">
+            <p>SCHOLARSHIP</p>
+            <p>ENROLLMENT</p>
+            <p>COURSES</p>
+        </section>  
     </div>
 </body>
 </html>
