Commit 7 : The Homepage & About page
Added
- About page
- Unselectable Text
- Animations
- Background Linear on Text
- Media Query for Device's View (Responsive)
- Few Images

--- a/GROUP_PROJECT/myForgotPassword.html
+++ b/GROUP_PROJECT/myForgotPassword.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>International State College of the Philippines</title>
     <link rel="stylesheet" href="CSS/myForgotPassword.css">
+    <link rel="stylesheet" href="CSS/MediaQuery.css">
     <link rel="icon" type="image/x-icon" href="Images/ico/Logo.ico">
     <script src="JavaScript/jsForgot.js"></script>
 </head>
