--- a/GROUP_PROJECT/myHome.html
+++ b/GROUP_PROJECT/myHome.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>International State College of the Philippines</title>
     <link rel="stylesheet" href="CSS/myHome.css">
+    <link rel="stylesheet" href="CSS/MediaQuery.css">
     <link rel="icon" type="image/x-icon" href="Images/ico/Logo.ico">
     <script src="JavaScript/jsScrollbar.js"></script>
 </head>
@@ -15,9 +16,9 @@
         <section>
         <img src="Images/myHome/Logo.png" alt="" class="logo">
         <p>International State College of <br> Philippines</p>
-        <nav>
-            <a href="myHome.html" class="homecolor">Home</a>
-            <a href="">About</a>
+        <nav class="nav1">
+            <a href="myHome.html">Home</a>
+            <a href="myAbout.html">About</a>
             <a href="">Academics</a>
             <a href="">Admission</a>
             <a href="">Contacts</a>
@@ -28,14 +29,49 @@
         </section>
     </div>
     <div class="admission">
+        <div class="quote">
+            <h1>Hope for Youths</h1>
+            <p>Creativity inspires us and bring us together. We're taking a deep dive into everything possible.</p>
+        </div>
         <section class="banner">
             <img src="Images/myHome/Banner.png" alt="">
         </section>
-        <section class="bg">
-            <p>SCHOLARSHIP</p>
-            <p>ENROLLMENT</p>
-            <p>COURSES</p>
-        </section>  
+
+        <!-- <nav class="nav2">
+            <a href="">Scholarship</a>
+            <a href="">Enrollment</a>
+            <a href="">Courses</a>
+        </nav> -->
+
+        <div class="info">
+            <h2>Quality Oriented<br>Education</h2>
+            <p>It means you`ll have access to a broad range of degrees and programs taught by<br>
+                highly accomplished faculty. You`ll be surrounded by a student body that can<br>
+                motivate and inspire you.</p>
+            <h2 class="h2-1">Center of Excellence in<br>Information Technology</h2>
+            <p class="p-1">Named Center of Excellence in Teacher Education by Comission of Higher Education</p>
+        </div>
+        <div class="video">
+            <div class="video-container">
+            <div class="color-overlay"></div>
+            <video autoplay loop muted>
+                <source src="Video/Students.mp4" type="video/mp4">
+            </video>
+            </div>
+        </div>
+        <hr class="outline2">
+        <div class="contacts">
+            <img src="Images/myHome/Logo.png" alt="" class="logo2">
+            <p class="contact">International State College of <br> Philippines</p>
+            <div class="information">
+                <p class="contact2">Basak Pardo., Ave Cebu Philippines<br>
+                    Telephone: 6-8000<br>
+                    Email: info@iscp.edu
+                    </p>
+
+                <p class="contact3">&copy; 2022 International State<br> College of the Philippines.<br> All Rights Reserved.</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
