--- a/GROUP_PROJECT/myHome.html
+++ b/GROUP_PROJECT/myHome.html
@@ -11,6 +11,8 @@
     <script src="JavaScript/jsScrollbar.js"></script>
 </head>
 <body id="scrollbar">
+
+    <!-- NAVIGATION / TOP LINE -->
     <hr class="outline">
     <div class="navigation">
         <section>
@@ -28,6 +30,8 @@
             <img src="Images/myHome/User.jpg" alt="" class="userlog">
         </section>
     </div>
+
+    <!-- CONTENT HERE -->
     <div class="admission">
         <div class="quote">
             <h1>Hope for Youths</h1>
@@ -42,7 +46,7 @@
             <a href="">Enrollment</a>
             <a href="">Courses</a>
         </nav> -->
-
+        
         <div class="info">
             <h2>Quality Oriented<br>Education</h2>
             <p>It means you`ll have access to a broad range of degrees and programs taught by<br>
@@ -59,6 +63,9 @@
             </video>
             </div>
         </div>
+
+        <!-- BOTTOM LINE -->
+
         <hr class="outline2">
         <div class="contacts">
             <img src="Images/myHome/Logo.png" alt="" class="logo2">
