Commit 10 : Small Changes

--- a/Project/myAbout.html
+++ b/Project/myAbout.html
@@ -23,7 +23,7 @@
             <a href="">Contacts</a>
             <div class="animation start-home"></div>
         </nav>
-            <a href="myLogin.html"><img src="Images/myHome/logout-512.png" alt="" class="logout"></a>
+            <a href="index.html"><img src="Images/myHome/logout-512.png" alt="" class="logout"></a>
             <img src="Images/myHome/User.jpg" alt="" class="userlog">
         </section>
         </div>
