--- a/Project/myForgotPassword.html
+++ b/Project/myForgotPassword.html
@@ -23,7 +23,7 @@
         <p>Search by E-mail</p>
         <input type="text" placeholder="Enter E-mail" id="email">
         <input type="submit" value="Search" onclick="email()">
-        <a href="#" onclick="location.href='myLogin.html';">Return to Login</a>
+        <a href="#" onclick="location.href='index.html';">Return to Login</a>
     </form>
 
 </div>
