--- a/Project/myHome.html
+++ b/Project/myHome.html
@@ -6,11 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>International State College of the Philippines</title>
     <link rel="stylesheet" href="CSS/myHome.css">
-    <link rel="stylesheet" href="CSS/MediaQuery.css">
     <link rel="icon" type="image/x-icon" href="Images/ico/Logo.ico">
-    <script src="JavaScript/jsScrollbar.js"></script>
 </head>
-<body id="scrollbar">
+<body>
 
     <!-- NAVIGATION / TOP LINE -->
     <hr class="outline">
@@ -21,7 +19,7 @@
         <nav class="nav1">
             <a href="myHome.html">Home</a>
             <a href="myAbout.html">About</a>
-            <a href="">Academics</a>
+            <a href="myAcademics.html">Academics</a>
             <a href="">Admission</a>
             <a href="">Contacts</a>
             <div class="animation start-home"></div>
