--- a/Project/myRegister.html
+++ b/Project/myRegister.html
@@ -23,7 +23,7 @@
         <p>Repeat Password</p>
         <input type="password" placeholder="Repeat Password" required>
         <input type="button" value="Register" onclick="location.href='myRegistered.html';">
-        <a href="#" onclick="location.href='index.html';">Already have an account?</a>
+        <a href="index.html">Already have an account?</a>
     </form>
    
 </div>
