--- a/Project/myRegistered.html
+++ b/Project/myRegistered.html
@@ -15,7 +15,7 @@
     </div>
 <div class="mother">
     <h2>You have been registered!</h2>
-    <a href="#" onclick="location.href='index.html';">Return to Login</a>
+    <a href="index.html">Return to Login</a>
 </div>
 </body>
 </html>
