--- a/Project/index.html
+++ b/Project/index.html
@@ -18,12 +18,12 @@
     <h2>Login Here</h2>
     <form>
         <label for="loginUser"> Username </label>
-        <input type="text" name="loginUser" placeholder="Enter Username" id="username" required>
+        <input type="text" placeholder="Enter Username" id="username" required>
         <label for="loginPassword"> Password </label>
-        <input type="password" name="loginPassword" placeholder="Enter Password" id="password" required>
+        <input type="password" placeholder="Enter Password" id="password" required>
         <input type="submit" value="Login" onclick="auth()">
-        <a href="#" onclick="location.href='myForgotPassword.html';">Forget password?</a> <br>
-        <a href="#" onclick="location.href='myRegister.html';">Don't have an account?</a>
+        <a href="myForgotPassword.html">Forget password?</a> <br>
+        <a href="myRegister.html">Don't have an account?</a>
     </form>
 <script src="JavaScript/jsLogin.js"></script>
 </div>
