--- a/Project/myAbout.html
+++ b/Project/myAbout.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>International State College of the Philippines</title>
     <link rel="stylesheet" href="CSS/myAbout.css">
-    <link rel="stylesheet" href="CSS/MediaQuery.css">
     <link rel="icon" type="image/x-icon" href="Images/ico/Logo.ico">
 </head>
 <body>
@@ -18,7 +17,7 @@
         <nav>
             <a href="myHome.html" class="homecolor">Home</a>
             <a href="myAbout.html">About</a>
-            <a href="">Academics</a>
+            <a href="myAcademics.html">Academics</a>
             <a href="">Admission</a>
             <a href="">Contacts</a>
             <div class="animation start-home"></div>
