Commit 12: Academics & Admission

--- a/Project/myAcademics.html
+++ b/Project/myAcademics.html
@@ -16,87 +16,49 @@
         <section>
         <img src="Images/myHome/Logo.png" alt="" class="logo">
         <p>International State College of <br> Philippines</p>
-        <nav class="nav1">
+        <nav class="nav1"> 
             <a href="myHome.html">Home</a>
             <a href="myAbout.html">About</a>
             <a href="myAcademics.html">Academics</a>
-            <a href="">Admission</a>
+            <a href="myAdmission.html">Admission</a>
             <a href="">Contacts</a>
             <div class="animation start-home"></div>
         </nav>
-            <a href="myLogin.html"><img src="Images/myHome/logout-512.png" alt="" class="logout"></a>
+            <a href="index.html"><img src="Images/myHome/logout-512.png" alt="" class="logout"></a>
             <img src="Images/myHome/User.jpg" alt="" class="userlog">
         </section>
     </div>
 
     <!-- CONTENT HERE -->
-    <div class="enrollment">
-        <div class="hg-1">
-        <h1>enrollment</h1>
-    </div>
-        <form>
-            <button type="button" id="enroll" onclick="window.location.href = 'enroll.html'" >enroll here</button>
-        </form>
-    </div>
-
-    <div class="req">
-        <h2>enrollment requirements</h2>
-        <div class="pg-1">
-        <p>College New Students:</p>
+    <hr class="outline2">
+    <div class="container1"></div>
+     <div class="cont">
+        <h3>Elementary</h3> 
+        <div class="color-overlay">
+        <a href="myElementary.html"><button>Visit</button></a> 
         </div>
-        <ol>
-            <li>Report Card</li>
-            <br>
-            <li>Certificate of Good Moral</li>
-            <br>
-            <li>PSA Certificate of Life Birth</li>
-        </ol>
-        <br>
-        <div class="pg-1">
-        <p>College Transferees:</p>
-    </div>
-        <ol>
-            <li>Certificate of Transfer Credentials or Honorable...</li>
-            <br>
-            <li>Transcript of Record for Evaluation</li>
-            <br>
-            <li>Certificate of Good Moral</li>
-        </ol>
-        <br>
-        <div class="pg-1">
-        <p>College Cross-enrollees:</p>
-    </div>
-        <ol>
-            <li>Permit to cross-enroll</li>
-            <br>
-            <li>Certificate of Good Moral</li>
-        </ol>
-        <div class="online">
-            <div class="pg-1">
-            <p>Online enrollment:</p>
+     </div>
+     <hr class="outline2">
+     <div class="cont1" >
+        <h3>Junior High School</h3> 
+        <div class="color">
+         <a href="myJunior.html"><button>Visit</button></a> 
         </div>
-            <ol>
-                <li>Admission application:</li>
-                <br>
-                <li>Submission of Documents (link provided in step 1)</li>
-                <br>
-                <li>Application Confirmation - Enrollment confirmation will be sent through the applicant portal by the admission team within 3 working days.**Note: Application submitted after office hours will be processed on the next working day.</li>
-                <br>
-                <li>Payment of Learning Management System Activation Fee (Onsite or Online) (Payment instruction is provided in step 3)</li>
-            </ol>
-        </div>
-    </div>
-
-    <div class="pay">
-        <h1>Payment Options</h1>
-        <button type="button" id="opt1" onclick="pay(this.id)"></button>
-        <button type="button" id="opt2" onclick="pay(this.id)"></button>
-        <button type="button" id="opt3" onclick="pay(this.id)"></button>
-        <button type="button" id="opt4" onclick="pay(this.id)"></button>
-    </div>
-
+     </div>
+     <hr class="outline2">
+     <div class="cont2">
+        <h3>Senior High School</h3> 
+        <div class="color1">
+         <a href="mySenior.html"><button>Visit</button></a> </div></a>
+     </div>
+     <hr class="outline2">
+     <div class="cont3">
+        <h3>College</h3> 
+        <div class="color2">
+            <a href="myCollege.html"><button>Visit</button></a>
+         </div></div>
     <!-- CONTENT ENDS HERE -->
-
+    
         <!-- BOTTOM LINE -->
 
         <hr class="outline2">
@@ -113,12 +75,5 @@
             </div>
         </div>
     </div>
-<script>
-    function pay(id)
-    {
-        localStorage.option = id;
-        window.location.href = 'myPayment.html';
-    }
-</script>
 </body>
 </html>
