--- a/Project/myAbout.html
+++ b/Project/myAbout.html
@@ -18,7 +18,7 @@
             <a href="myHome.html" class="homecolor">Home</a>
             <a href="myAbout.html">About</a>
             <a href="myAcademics.html">Academics</a>
-            <a href="">Admission</a>
+            <a href="myAdmission.html">Admission</a>
             <a href="">Contacts</a>
             <div class="animation start-home"></div>
         </nav>
