--- a/Project/myEnrollment.html
+++ b/Project/myEnrollment.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>International State College of the Philippines</title>
-    <link rel="stylesheet" href="CSS/myAcademics.css">
+    <link rel="stylesheet" href="CSS/myAdmission.css">
     <link rel="icon" type="image/x-icon" href="Images/ico/Logo.ico">
 </head>
 <body id="enrollment">
@@ -20,18 +20,18 @@
             <a href="myHome.html">Home</a>
             <a href="myAbout.html">About</a>
             <a href="myAcademics.html">Academics</a>
-            <a href="">Admission</a>
+            <a href="myAdmission.html">Admission</a>
             <a href="">Contacts</a>
             <div class="animation start-home"></div>
         </nav>
-            <a href="myLogin.html"><img src="Images/myHome/logout-512.png" alt="" class="logout"></a>
+            <a href="index.html"><img src="Images/myHome/logout-512.png" alt="" class="logout"></a>
             <img src="Images/myHome/User.jpg" alt="" class="userlog">
         </section>
     </div>
 
     <!-- CONTENT HERE -->
-    <form class="enroll">
-        <div class="bio">
+    <div class="bio1">
+    <form class="bio">
             <h1>Online Enrollment</h1>
 
             <label>Username: </label>
@@ -43,13 +43,13 @@
             <label>Email: </label>
             <input type="text" placeholder="sample@gmail.com">
             <br>
-        </div>
 
-        <button type="button" class="register">Register</button>
-
-        <label>Already a user? </label>
-        <button type="button" class="login">Login</button>
+            <button type="button" class="register">Register</button>
+            <br>
+            <br>
+            <button type="button" class="login">Login</button>
     </form>
+</div>
 
     <!-- CONTENT ENDS HERE -->
 
