--- a/Project/myHome.html
+++ b/Project/myHome.html
@@ -19,8 +19,8 @@
         <nav class="nav1">
             <a href="myHome.html">Home</a>
             <a href="myAbout.html">About</a>
-            <a href="myAcademics.html">Academics</a>
-            <a href="">Admission</a>
+            <a href="">Academics</a>
+            <a href="myAdmission.html">Admission</a>
             <a href="">Contacts</a>
             <div class="animation start-home"></div>
         </nav>
