Commit 14 : Contacts & Small Changes

--- a/Project/myHome.html
+++ b/Project/myHome.html
@@ -19,9 +19,9 @@
         <nav class="nav1">
             <a href="myHome.html">Home</a>
             <a href="myAbout.html">About</a>
-            <a href="">Academics</a>
+            <a href="myAcademics.html">Academics</a>
             <a href="myAdmission.html">Admission</a>
-            <a href="">Contacts</a>
+            <a href="myContacts.html">Contacts</a>
             <div class="animation start-home"></div>
         </nav>
             <a href="index.html"><img src="Images/myHome/logout-512.png" alt="" class="logout"></a>
