--- a/Project/myAcademics.html
+++ b/Project/myAcademics.html
@@ -21,7 +21,7 @@
             <a href="myAbout.html">About</a>
             <a href="myAcademics.html">Academics</a>
             <a href="myAdmission.html">Admission</a>
-            <a href="">Contacts</a>
+            <a href="myContacts.html">Contacts</a>
             <div class="animation start-home"></div>
         </nav>
             <a href="index.html"><img src="Images/myHome/logout-512.png" alt="" class="logout"></a>
@@ -30,7 +30,6 @@
     </div>
 
     <!-- CONTENT HERE -->
-    <hr class="outline2">
     <div class="container1"></div>
      <div class="cont">
         <h3>Elementary</h3> 
