Commit 16 : Small Changes in Admission

--- a/Project/myAdmission.html
+++ b/Project/myAdmission.html
@@ -31,9 +31,7 @@
 
     <!-- CONTENT HERE -->
     <div class="enrollment">
-        <div class="hg-1">
         <h1>enrollment</h1>
-    </div>
         <form>
             <button type="button" id="enroll" onclick="window.location.href = 'myEnrollment.html'" >enroll here</button>
         </form>
@@ -41,58 +39,50 @@
 
     <div class="req">
         <h2>enrollment requirements</h2>
-        <div class="pg-1">
         <p>College New Students:</p>
-        </div>
         <ol>
             <li>Report Card</li>
-            <br>
             <li>Certificate of Good Moral</li>
-            <br>
             <li>PSA Certificate of Life Birth</li>
         </ol>
         <br>
-        <div class="pg-1">
         <p>College Transferees:</p>
-    </div>
         <ol>
             <li>Certificate of Transfer Credentials or Honorable...</li>
-            <br>
             <li>Transcript of Record for Evaluation</li>
-            <br>
             <li>Certificate of Good Moral</li>
         </ol>
         <br>
-        <div class="pg-1">
         <p>College Cross-enrollees:</p>
-    </div>
         <ol>
             <li>Permit to cross-enroll</li>
-            <br>
             <li>Certificate of Good Moral</li>
+            <li>lorem...</li>
         </ol>
         <div class="online">
-            <div class="pg-1">
             <p>Online enrollment:</p>
-        </div>
             <ol>
                 <li>Admission application:</li>
-                <br>
                 <li>Submission of Documents (link provided in step 1)</li>
-                <br>
                 <li>Application Confirmation - Enrollment confirmation will be sent through the applicant portal by the admission team within 3 working days.**Note: Application submitted after office hours will be processed on the next working day.</li>
-                <br>
                 <li>Payment of Learning Management System Activation Fee (Onsite or Online) (Payment instruction is provided in step 3)</li>
+                <li>lorem...</li>
             </ol>
         </div>
     </div>
 
     <div class="pay">
         <h1>Payment Options</h1>
+        <hr>
         <button type="button" id="opt1" onclick="pay(this.id)"></button>
         <button type="button" id="opt2" onclick="pay(this.id)"></button>
         <button type="button" id="opt3" onclick="pay(this.id)"></button>
         <button type="button" id="opt4" onclick="pay(this.id)"></button>
+    </div>
+
+    <div class="motto">
+        <h1>overcome, strive, adapt!</h1>
+        <p>become part of the ISC now!</p>
     </div>
 
     <!-- CONTENT ENDS HERE -->
