--- a/Project/myEnrollment.html
+++ b/Project/myEnrollment.html
@@ -44,7 +44,7 @@
             <input type="text" placeholder="sample@gmail.com" id="email">
             <br>
 
-            <button type="button" class="register">Register</button>
+            <button type="button" class="register" onclick="reg()">Register</button>
             <br>
             <br>
             <button type="button" class="login" onclick="auth()">Login</button>
